--- a/0x01-react_intro/task_5/dashboard/package.json
+++ b/0x01-react_intro/task_5/dashboard/package.json
@@ -33,5 +33,9 @@
     "setupFiles": [
       "<rootDir>/config/setupTests.js"
     ]
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
