--- a/0x04-React_inline_styling/task_3/dashboard/package.json
+++ b/0x04-React_inline_styling/task_3/dashboard/package.json
@@ -49,6 +49,7 @@
     }
   },
   "dependencies": {
+    "aphrodite": "^2.4.0",
     "jsdom": "^24.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
