--- a/0x06-React_Immutable/package.json
+++ b/0x06-React_Immutable/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "lint": "./node_modules/.bin/eslint",
-    "check-lint": "lint [0-9]*.js",
+    "check-lint": "npm run lint [0-9]*.js",
     "test": "jest",
     "start": "babel-node",
     "full-test": "./node_modules/.bin/eslint [0-9]*.js && jest"
